added prod url; added message service
